# MPL

./: .gitignore  Pipfile  pyproject.toml  readme.md
.run/: mplsh.run.xml
Docs/: contention.md
Docs/0.0.1/: Engine Context.md  Expression Evaluation.md  Reference Resolution.md  rules.md
Docs/2022.0/: Assignments and Keyflags.md  Expressions.md  Implicit Definition Rules.md  MPL Standard.md  Operators.md  States.md  Types.md
Docs/Samples/: contention.0.0.q.mpl  simple-dialog-0.0.3.mpl  simple-mtg-0.0.2.mpl  simple_wumpus-0.0.1.mpl
Docs/Samples (Not Up To Date)/: DesignReview.mpl  HungryCharacter.mpl  SampleStateChart.md  Shipwrightbot.mpl  Worker.mpl  simple_wumpus.mpl
Parser/: CustomParsers.py  expression_parser.py  mpl_parser.py  mpl_parser_classes.py
Parser/ExpressionParsers/: arithmetic_expression_parser.py  assignment_expression_parser.py  label_expression_parser.py  logical_expression_parser.py  machine_expression_parser.py  reference_expression_parser.py  rule_expression_parser.py  scenario_expression_parser.py  state_expression_parser.py  trigger_expression_parser.py
Parser/Tokenizers/: operator_tokenizers.py  simple_value_tokenizer.py
Parser/old/: arrow_parser.py  expression_parser.py  mpl_parser.py  mpl_parser_classes.py
Tests/: __init__.py  contention_demo.py  test_custom_parsers.py  test_main.py  test_mpl_parser.py
Tests/exploration/: test_thing.py
Tests/lib/: test_mpl_vector.py  (+4 more)
lib/: CustomParsers.py  additive_parsers.py  custom_parsers.py  invert_dict.py  mpl_vector.py  quick_filter_set.py  repsep2.py  simple_graph.py  tree_parser.py
(+110 files in other folders)
