[tool.poetry]
name = "machinepolicylanguage"
version = "0.0.1"
description = ""
authors = ["lostinplace"]

[tool.poetry.dependencies]
python = "^3.10"
prompt-toolkit = "^3.0.28"
networkx = "^2.8"
sympy = "^1.10.1"
numpy = "^1.22"
mystic =  {git = "https://github.com/uqfoundation/mystic"}
parsita = "^1.7.0"
gitpython = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
